--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css" type="text/css">
+<link rel="stylesheet" href="	https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css
+">
+
 </head>
 <body>
 	<div class="navs">
@@ -24,6 +27,9 @@
 	</section>
 	<section id="mySpa4" class="mySpa4">
 		<h1>Footer</h1>
+		<div class="errows">
+			<i class="fa-solid fa-arrow-up"></i>
+		</div>
 	</section>
 </body>
 </html>
