--- a/index.html
+++ b/index.html
@@ -27,9 +27,13 @@
 	</section>
 	<section id="mySpa4" class="mySpa4">
 		<h1>Footer</h1>
-		<div class="errows">
-			<i class="fa-solid fa-arrow-up"></i>
-		</div>
 	</section>
+	<div>		
+		<div class="errows">
+			<a href="#Header">
+				<i class="fa-solid fa-arrow-up"></i>
+			</a>
+		</div>
+	</div>
 </body>
 </html>
